2007年10月10日 星期三 11时38分18秒 lerosua
	
	有个bug, 就是发送给离线的人的消息的时候，再关闭窗口就
	容易崩溃。因为关闭窗口就会删除会话。而会话中的一些后台
	进程却未必已经完成。比如，已经发送了信号通知对方打字停止，
	但在这时关闭窗口会马上删除会话，而后台中gloox才刚准备发送
	信号，而会话已经没了，这时候就崩溃了。看来关闭会话的时机不好
	，得掌握着重实现一下。现在只能把发送信号的所有函数去掉以暂时
	屏蔽这个BUG。

	那就不应该关闭窗口就关闭会话，但时机在哪呢？看来应该是同步的
	问题啊。


2007-08-27  yetist  <yetist@gmail.com>

    * doc/Makefile.am configure.in Makefile.am autogen.sh:
    some changes.

    * data/images/Makefile.am:
    * data/italk.desktop.in.in:
    * data/Makefile.am:
    add desktop file, so we can run italk from main menu.

    * src/about.h:
    * src/MainWindow.h:
    * src/MsgWindow.h:
    * src/Bodies.cpp:
    * src/MainWindow.cpp:
    * data/ui/Makefile.am:
    * data/ui/login_window.xml:
    * data/ui/about.xml:
    * data/ui/main_window.xml:
    * data/ui/msg_window.xml:
    rename *.xml to *.glade

    * po/POTFILES.in:
    * po/zh_CN.po:
    * po/ChangeLog:
    translate test for zh_CN

2007-08-27  yetist  <yetist@gmail.com>

    * more than 40 files:
    清除svn中无用的垃圾文件, 加入autogen.sh,
    修改configure.in及Makefile.am等文件, 加入po支持, pixmap目录重命名,
    重写README及ChangeLog文件内容.

2007年06月13日 星期三 12时32分40秒 
	用sigc::mem_fun调用 的函数，返回值必须是void才行。
       6.18
        wind搞定io监视

2007年 06月 23日 星期六 08:17:06 CST
	应该是昨天的日志，将geekr的结构更改了一下。
	建立了一个主类 Bodies,  用以包容所有处理的类，包含消息处理和UI的类。

2007年 06月 29日 星期五 23:08:01 CST
	因为要动态增加聊天标签页，所以不用glademm而用手工生成了MsgPage类.

2007年 06月 29日 星期五 23:58:01 CST
	已经可以加入聊天室。在需要的时候再完善这功能。

2007年07月13日 星期五 14时42分40秒 
	用VCard请求并非列表中用户的vcard信息会发生段错误。
	
2007年07月16日 星期一 12时12分51秒
	在关闭tab后再生成会话会段错误。
	应用tag来设置文字的颜色没起作用。 (已经解决)
	对方退订，非法操作，造成core dump
2007年07月17日 星期二 21时12分51秒
	在MsgWindow.h里有个getCurrentPage的函数，没有得到正确的Page (已经解决)

2007年07月19日 星期四 14时25分19秒 
	添加新的文件的话很容易导致 IO 不能继续执行了。表现为Talk类经常在TCL连接后就断了。不能登录上去了。是个大BUG啊
	有个加多一个控件也会出现这种情况。(大概找出不能连接的原因，说是tls连
接错误。
ConnTlsFailed	The server's certificate could not be verified or the 
TLS handshake did not complete successfully. (已解决)



2007年07月23日 星期一 22时25分19秒 
	添加了trayer。菜单回调函数有问题。(7.30,菜单回调问题解决)