@@ -39,7 +39,7 @@
 #include "TalkFT.h"
 #include "ConfXml.h"
 #include "TalkDiscoHandler.h"
-#include "TalkIbbStreamHandler.h"
+//#include "TalkIbbStreamHandler.h"
 using std::list;
 
 typedef list<std::string> USERLIST;
@@ -80,7 +80,7 @@ class Bodies
 		/**得到聊天室处理类*/
 		TalkRoomHandler& getRoomHandler() { return roomHandler; }
 		/**得到带内数据传输处理类*/
-		TalkIbbStreamHandler& getIbbStreamHandler() { return IBBSHandler; }
+		//TalkIbbStreamHandler& getIbbStreamHandler() { return IBBSHandler; }
 		/**得到本人jid*/
 		JID&		get_jid()	  { return *jid; }
 		/** 从配置文件中得到相应的项目*/
@@ -156,7 +156,7 @@ class Bodies
 		//TalkDiscoHandler  discohandler;
 		TalkCard   cardManage;
 		//TalkFT*	   talkFT;
-		TalkIbbStreamHandler IBBSHandler;
+		//TalkIbbStreamHandler IBBSHandler;
 		VCard*	   vcard;
 		//用于保存account结构的Tag
 		Tag*	   accountTag;
