@@ -1,3 +1,8 @@
+2008年 01月 19日 星期六 23:33:28 CST lerosua
+	添加libjingle目录，准备将代码为转移到gloox 1.0alpha中。
+	将要先去掉IBB（带内数据传输的代码）
+
+
 2007年10月10日 星期三 11时38分18秒 lerosua
 	
 	有个bug, 就是发送给离线的人的消息的时候，再关闭窗口就
